--- a/ultimate-_words.html
+++ b/ultimate-_words.html
@@ -9,6 +9,6 @@
 </body>
 
 <template name="hello">
-  <button>Click Me</button>
+  <button>Clidck Me</button>
   <p>You've pressed the button {{counter}} times.</p>
 </template>
